--- a/modules/ble_common/prj.conf.example
+++ b/modules/ble_common/prj.conf.example
@@ -8,13 +8,13 @@
 # BLE Common Module Configuration
 #
 # This file contains the recommended Kconfig settings for using the
-# ble_common module in your Nordic nRF project.
+# ble_common module with nrf_utils and cmd_parser in your Nordic nRF project.
 #
 
 # Core Bluetooth Configuration
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="Nordic_Device"
+CONFIG_BT_DEVICE_NAME="nRF_Utils_Device"
 
 # Bluetooth LE Configuration
 CONFIG_BT_LE_ADV_EXT=n
@@ -46,6 +46,21 @@ CONFIG_NVS=y
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
 
+# GPIO for LEDs and buttons
+CONFIG_GPIO=y
+
+# ADC for battery monitoring
+CONFIG_ADC=y
+CONFIG_ADC_NRFX_SAADC=y
+
+# Temperature sensor
+CONFIG_SENSOR=y
+CONFIG_TEMP_NRF5=y
+
+# Memory management for command parser
+CONFIG_HEAP_MEM_POOL_SIZE=8192
+CONFIG_SYS_HEAP_RUNTIME_STATS=y
+
 # Logging Configuration (recommended for debugging)
 CONFIG_LOG=y
 CONFIG_BT_DEBUG_LOG=y
@@ -61,5 +76,6 @@ CONFIG_ASSERT=y
 CONFIG_DEBUG=y
 CONFIG_DEBUG_INFO=y
 
-# Memory optimization (adjust as needed)
-CONFIG_HEAP_MEM_POOL_SIZE=8192
+# Newlib for better printf/string support in command parser
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
